; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_clockevents.c_clockevents_register_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_clockevents.c_clockevents_register_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i64, i32, i32 }

@CLOCK_EVT_MODE_UNUSED = common dso_local global i64 0, align 8
@clockevents_lock = common dso_local global i32 0, align 4
@clockevent_devices = common dso_local global i32 0, align 4
@CLOCK_EVT_NOTIFY_ADD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clockevents_register_device(%struct.clock_event_device* %0) #0 {
  %2 = alloca %struct.clock_event_device*, align 8
  %3 = alloca i64, align 8
  store %struct.clock_event_device* %0, %struct.clock_event_device** %2, align 8
  %4 = load %struct.clock_event_device*, %struct.clock_event_device** %2, align 8
  %5 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @CLOCK_EVT_MODE_UNUSED, align 8
  %8 = icmp ne i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @BUG_ON(i32 %9)
  %11 = load %struct.clock_event_device*, %struct.clock_event_device** %2, align 8
  %12 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @BUG_ON(i32 %16)
  %18 = load i64, i64* %3, align 8
  %19 = call i32 @spin_lock_irqsave(i32* @clockevents_lock, i64 %18)
  %20 = load %struct.clock_event_device*, %struct.clock_event_device** %2, align 8
  %21 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %20, i32 0, i32 1
  %22 = call i32 @list_add(i32* %21, i32* @clockevent_devices)
  %23 = load i32, i32* @CLOCK_EVT_NOTIFY_ADD, align 4
  %24 = load %struct.clock_event_device*, %struct.clock_event_device** %2, align 8
  %25 = call i32 @clockevents_do_notify(i32 %23, %struct.clock_event_device* %24)
  %26 = call i32 (...) @clockevents_notify_released()
  %27 = load i64, i64* %3, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* @clockevents_lock, i64 %27)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_add(i32*, i32*) #1

declare dso_local i32 @clockevents_do_notify(i32, %struct.clock_event_device*) #1

declare dso_local i32 @clockevents_notify_released(...) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
